Plugins/TeamCity/fluentbuild-runner/fluentbuild-runner-test/testData/plugins/fluentbuildRunner/app_rspec/spec/statistics/compile_error/error3_spec.rb
# @author: Roman Chernyatchik
require "spec"

describe "Compilation" do

  # Called after each example.
  after(:each) do
    $
  end

  it "should fail in after" do
    true.should == true
  end
end